--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "3.15.2",
+    "@prisma/client": "^3.15.2",
     "@types/node": "^16.9.6",
     "@types/react": "^17.0.24",
     "eslint-config-prettier": "^8.3.0",
