--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+####################################################
+# ADD .env TO .gitignore IF YOU ADD SECRITS
+####################################################
+
 # local env files
-.env
+# .env
 .env.local
 .env.development.local
 .env.test.local
