--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@/components/*": ["src/components/*"],
-
-      "@/react-query/*": ["src/react-query/*"],
-
+      "@/constants/*": ["src/constants/*"],
       "@/styles/*": ["styles/*"]
     },
     "incremental": true
