--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^3.15.2",
-    "@types/node": "^16.9.6",
+    "@types/node": "^16.11.49",
     "@types/react": "^17.0.24",
     "eslint-config-prettier": "^8.3.0",
     "next": "^12.0.7",
@@ -28,6 +27,7 @@
     "typescript": "^4.4.3"
   },
   "devDependencies": {
+    "@prisma/client": "^4.2.1",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "eslint": "^7.32.0",
@@ -38,7 +38,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prisma": "3.15.2",
+    "prisma": "^4.2.1",
     "sass": "^1.53.0",
     "ts-node": "^10.3.0"
   }
